cambios en estructura
