# src/Core/Application/Informe/InformeDTO.ts
@@ -1,0 +1,8 @@
+type InformeDTO = {
+  id: string;
+  lineanegocio: string;
+  vehiculo_nombre: string;
+  marca_vehiculo: string;
+};
+
+export { InformeDTO };
